Add links to AI tools

--- a/index.html
+++ b/index.html
@@ -119,48 +119,48 @@
             </h2>
             <p class="text-gray-500 mb-4 text-sm">⭐ = 简单入门 ｜ ⭐⭐ = 稍有难度</p>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-                <div class="bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-green-100">
+                <a href="https://chat.openai.com" target="_blank" class="bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-green-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-green-700">🤖 ChatGPT / Claude</span>
                         <span class="text-yellow-500">⭐</span>
                     </div>
                     <p class="text-green-600 text-sm mt-1">通用对话、写作、学习</p>
-                </div>
-                <div class="bg-gradient-to-r from-pink-50 to-rose-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-pink-100">
+                </a>
+                <a href="https://www.midjourney.com" target="_blank" class="bg-gradient-to-r from-pink-50 to-rose-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-pink-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-pink-700">🎨 Midjourney / DALL-E</span>
                         <span class="text-yellow-500">⭐</span>
                     </div>
                     <p class="text-pink-600 text-sm mt-1">画画、创意表达</p>
-                </div>
-                <div class="bg-gradient-to-r from-blue-50 to-cyan-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-blue-100">
+                </a>
+                <a href="https://www.duolingo.com" target="_blank" class="bg-gradient-to-r from-blue-50 to-cyan-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-blue-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-blue-700">🦉 Duolingo</span>
                         <span class="text-yellow-500">⭐</span>
                     </div>
                     <p class="text-blue-600 text-sm mt-1">英语基础（游戏化）</p>
-                </div>
-                <div class="bg-gradient-to-r from-violet-50 to-purple-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-violet-100">
+                </a>
+                <a href="https://www.speak.com" target="_blank" class="bg-gradient-to-r from-violet-50 to-purple-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-violet-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-violet-700">🗣️ Speak App</span>
                         <span class="text-yellow-500">⭐</span>
                     </div>
                     <p class="text-violet-600 text-sm mt-1">AI 英语口语练习</p>
-                </div>
-                <div class="bg-gradient-to-r from-amber-50 to-yellow-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-amber-100">
+                </a>
+                <a href="https://replit.com" target="_blank" class="bg-gradient-to-r from-amber-50 to-yellow-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-amber-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-amber-700">💻 Replit</span>
                         <span class="text-yellow-500">⭐⭐</span>
                     </div>
                     <p class="text-amber-600 text-sm mt-1">做小项目、小游戏</p>
-                </div>
-                <div class="bg-gradient-to-r from-slate-50 to-gray-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-slate-100">
+                </a>
+                <a href="https://www.notion.so" target="_blank" class="bg-gradient-to-r from-slate-50 to-gray-50 rounded-xl p-4 card-hover transition-all duration-300 cursor-pointer border border-slate-100 block no-underline">
                     <div class="flex justify-between items-center">
                         <span class="font-bold text-slate-700">📓 Notion AI</span>
                         <span class="text-yellow-500">⭐⭐</span>
                     </div>
                     <p class="text-slate-600 text-sm mt-1">整理笔记、做计划</p>
-                </div>
+                </a>
             </div>
         </div>
 
